2019-1/231/users/4244/executions/1689_1100.log
== TEST (2019-05-01 12:43:29) 
-- CODE:
cedula = int(input("Cedula: "))

if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garca")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Animal: Garoupa")
else:
	print("Animal: erro")
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 12:43:38) 
-- CODE:
cedula = int(input("Cedula: "))

if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garca")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Animal: Garoupa")
else:
	print("Animal: erro")
-- EXECUTION TIME:
0.197823
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: erro
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:44:39) 
-- CODE:
cedula = int(input("Cedula: "))

if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garca")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 12:44:44) 
-- CODE:
cedula = int(input("Cedula: "))

if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garca")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.21094
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:47:45) 
-- CODE:
cedula = int(input("Cedula: "))

if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garca")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 12:47:51) 
-- CODE:
cedula = int(input("Cedula: "))

if(cedula==2):
	print("Animal: Tartaruga")
elif(cedula==5):
	print("Animal: Garca")
elif(cedula==10):
	print("Animal: Arara")
elif(cedula==20):
	print("Animal: Mico-leao-dourado")
elif(cedula==50):
	print("Animal: Onca-pintada")
elif(cedula==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.22747
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:40:09) 
-- CODE:
cedula = int(input("Cedula: "))

if(cedula==2):
	x = "Animal: Tartaruga"
elif(cedula==5):
	x = "Animal: Garca"
elif(cedula==10):
	x = "Animal: Arara"
elif(cedula==20):
	x = "Animal: Mico-leao-dourado"
elif(cedula==50):
	x = "Animal: Onca-pintada"
elif(cedula==100):
	x = "Animal: Garoupa"
else:
	print(x)
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:41:07) 
-- CODE:
cedula = int(input("Cedula: "))

if(cedula==2):
	x = "Animal: Tartaruga"
elif(cedula==5):
	x = "Animal: Garca"
elif(cedula==10):
	x = "Animal: Arara"
elif(cedula==20):
	x = "Animal: Mico-leao-dourado"
elif(cedula==50):
	x = "Animal: Onca-pintada"
elif(cedula==100):
	x = "Animal: Garoupa"
else:
	x = "Animal: invalido"
print(x)
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:41:13) 
-- CODE:
cedula = int(input("Cedula: "))

if(cedula==2):
	x = "Animal: Tartaruga"
elif(cedula==5):
	x = "Animal: Garca"
elif(cedula==10):
	x = "Animal: Arara"
elif(cedula==20):
	x = "Animal: Mico-leao-dourado"
elif(cedula==50):
	x = "Animal: Onca-pintada"
elif(cedula==100):
	x = "Animal: Garoupa"
else:
	x = "Animal: invalido"
print(x)
-- EXECUTION TIME:
0.136286
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:42:31) 
-- CODE:
cedula = int(input("Cedula: "))

if(cedula==2):
	x = "Tartaruga"
elif(cedula==5):
	x = "Garca"
elif(cedula==10):
	x = "Arara"
elif(cedula==20):
	x = "Mico-leao-dourado"
elif(cedula==50):
	x = "Onca-pintada"
elif(cedula==100):
	x = "Garoupa"
else:
	x = "invalido"
print(x)
-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:42:36) 
-- CODE:
cedula = int(input("Cedula: "))

if(cedula==2):
	x = "Tartaruga"
elif(cedula==5):
	x = "Garca"
elif(cedula==10):
	x = "Arara"
elif(cedula==20):
	x = "Mico-leao-dourado"
elif(cedula==50):
	x = "Onca-pintada"
elif(cedula==100):
	x = "Garoupa"
else:
	x = "invalido"
print(x)
-- EXECUTION TIME:
0.202676
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:43:18) 
-- CODE:
cedula = int(input("Cedula: "))

if(cedula==2):
	x = "Animal: Tartaruga"
elif(cedula==5):
	x = "Animal: Garca"
elif(cedula==10):
	x = "Animal: Arara"
elif(cedula==20):
	x = "Animal: Mico-leao-dourado"
elif(cedula==50):
	x = "Animal: Onca-pintada"
elif(cedula==100):
	x = "Animal: Garoupa"
else:
	x = "Animal: invalido"
print(x)

-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:43:24) 
-- CODE:
cedula = int(input("Cedula: "))

if(cedula==2):
	x = "Animal: Tartaruga"
elif(cedula==5):
	x = "Animal: Garca"
elif(cedula==10):
	x = "Animal: Arara"
elif(cedula==20):
	x = "Animal: Mico-leao-dourado"
elif(cedula==50):
	x = "Animal: Onca-pintada"
elif(cedula==100):
	x = "Animal: Garoupa"
else:
	x = "Animal: invalido"
print(x)

-- EXECUTION TIME:
0.210625
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:44:55) 
-- CODE:
cedula = int(input("Cedula: "))

if(cedula==2):
	Animal = "Animal: Tartaruga"
elif(cedula==5):
	Animal = "Animal: Garca"
elif(cedula==10):
	Animal = "Animal: Arara"
elif(cedula==20):
	Animal = "Animal: Mico-leao-dourado"
elif(cedula==50):
	Animal = "Animal: Onca-pintada"
elif(cedula==100):
	Animal = "Animal: Garoupa"
else:
	Animal = "Animal: invalido"
print(Animal)

-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:45:00) 
-- CODE:
cedula = int(input("Cedula: "))

if(cedula==2):
	Animal = "Animal: Tartaruga"
elif(cedula==5):
	Animal = "Animal: Garca"
elif(cedula==10):
	Animal = "Animal: Arara"
elif(cedula==20):
	Animal = "Animal: Mico-leao-dourado"
elif(cedula==50):
	Animal = "Animal: Onca-pintada"
elif(cedula==100):
	Animal = "Animal: Garoupa"
else:
	Animal = "Animal: invalido"
print(Animal)

-- EXECUTION TIME:
0.212085
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:45:46) 
-- CODE:
cedula = int(input("Cedula: "))
print("Entrada:", cedula)
if(cedula==2):
	Animal = "Animal: Tartaruga"
elif(cedula==5):
	Animal = "Animal: Garca"
elif(cedula==10):
	Animal = "Animal: Arara"
elif(cedula==20):
	Animal = "Animal: Mico-leao-dourado"
elif(cedula==50):
	Animal = "Animal: Onca-pintada"
elif(cedula==100):
	Animal = "Animal: Garoupa"
else:
	Animal = "Animal: invalido"
print(Animal)

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:45:51) 
-- CODE:
cedula = int(input("Cedula: "))
print("Entrada:", cedula)
if(cedula==2):
	Animal = "Animal: Tartaruga"
elif(cedula==5):
	Animal = "Animal: Garca"
elif(cedula==10):
	Animal = "Animal: Arara"
elif(cedula==20):
	Animal = "Animal: Mico-leao-dourado"
elif(cedula==50):
	Animal = "Animal: Onca-pintada"
elif(cedula==100):
	Animal = "Animal: Garoupa"
else:
	Animal = "Animal: invalido"
print(Animal)

-- EXECUTION TIME:
0.130313
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:47:25) 
-- CODE:
cedula = int(input("Cedula: "))
print("Entrada:", cedula)
if(cedula==2):
	Animal = "Tartaruga"
elif(cedula==5):
	Animal = "Garca"
elif(cedula==10):
	Animal = "Arara"
elif(cedula==20):
	Animal = "Mico-leao-dourado"
elif(cedula==50):
	Animal = "Onca-pintada"
elif(cedula==100):
	Animal = "Garoupa"
else:
	Animal = "invalido"
print(Animal)

-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:47:31) 
-- CODE:
cedula = int(input("Cedula: "))
print("Entrada:", cedula)
if(cedula==2):
	Animal = "Tartaruga"
elif(cedula==5):
	Animal = "Garca"
elif(cedula==10):
	Animal = "Arara"
elif(cedula==20):
	Animal = "Mico-leao-dourado"
elif(cedula==50):
	Animal = "Onca-pintada"
elif(cedula==100):
	Animal = "Garoupa"
else:
	Animal = "invalido"
print(Animal)

-- EXECUTION TIME:
0.193755
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:48:49) 
-- CODE:
cedula = int(input("Cedula: "))
print("Entrada:", cedula)
if(cedula==2):
	Animal = "Tartaruga"
elif(cedula==5):
	Animal = "Garca"
elif(cedula==10):
	Animal = "Arara"
elif(cedula==20):
	Animal = "Mico-leao-dourado"
elif(cedula==50):
	Animal = "Onca-pintada"
elif(cedula==100):
	Animal = "Garoupa"
else:
	Animal = "Invalido"
print(Animal)

-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:48:58) 
-- CODE:
cedula = int(input("Cedula: "))
print("Entrada:", cedula)
if(cedula==2):
	Animal = "Tartaruga"
elif(cedula==5):
	Animal = "Garca"
elif(cedula==10):
	Animal = "Arara"
elif(cedula==20):
	Animal = "Mico-leao-dourado"
elif(cedula==50):
	Animal = "Onca-pintada"
elif(cedula==100):
	Animal = "Garoupa"
else:
	Animal = "Invalido"
print(Animal)

-- EXECUTION TIME:
0.150379
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:49:19) 
-- CODE:
cedula = int(input("Cedula: "))
print("Entrada:", cedula)
if(cedula==2):
	Animal = "Animal: Tartaruga
elif(cedula==5):
	Animal = "Animal: Garca"
elif(cedula==10):
	Animal = "Animal: Arara"
elif(cedula==20):
	Animal = "Animal: Mico-leao-dourado"
elif(cedula==50):
	Animal = "Animal: Onca-pintada"
elif(cedula==100):
	Animal = "Animal: Garoupa"
else:
	Animal = "Animal: Invalido"
print(Animal)

-- ERROR:
File "XXXX", line 4
    Animal = "Animal: Tartaruga
                              ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:49:28) 
-- CODE:
cedula = int(input("Cedula: "))
print("Entrada:", cedula)
if(cedula==2):
	Animal = "Animal: Tartaruga"
elif(cedula==5):
	Animal = "Animal: Garca"
elif(cedula==10):
	Animal = "Animal: Arara"
elif(cedula==20):
	Animal = "Animal: Mico-leao-dourado"
elif(cedula==50):
	Animal = "Animal: Onca-pintada"
elif(cedula==100):
	Animal = "Animal: Garoupa"
else:
	Animal = "Animal: Invalido"
print(Animal)

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:49:35) 
-- CODE:
cedula = int(input("Cedula: "))
print("Entrada:", cedula)
if(cedula==2):
	Animal = "Animal: Tartaruga"
elif(cedula==5):
	Animal = "Animal: Garca"
elif(cedula==10):
	Animal = "Animal: Arara"
elif(cedula==20):
	Animal = "Animal: Mico-leao-dourado"
elif(cedula==50):
	Animal = "Animal: Onca-pintada"
elif(cedula==100):
	Animal = "Animal: Garoupa"
else:
	Animal = "Animal: Invalido"
print(Animal)

-- EXECUTION TIME:
0.139652
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
